--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ scikit-learn >=1.1.3
 numpy >=1.23.4
 setuptools >=65.5.0
 scipy >=1.9.3
-statsmodels >=0.14.1
-lavaset
+# lavaset
 cython >=0.29.32
 joblib >= 1.1.1
