made changes on yml for actions trigger

--- a/.github/workflows/lavaset-build.yml
+++ b/.github/workflows/lavaset-build.yml
@@ -58,7 +58,7 @@ on: [push, pull_request]
 jobs:
   build_wheels:
     name: Build wheels on Windows and macOS for Python ${{ matrix.python-version }}
-    runs-on: [windows-latest]
+    runs-on: [macos-latest]
     strategy:
       matrix:
         python-version: ['3.10']
