--- a/.github/workflows/lavaset-build.yml
+++ b/.github/workflows/lavaset-build.yml
@@ -78,25 +78,21 @@
 #         path: ./wheelhouse/*.whl
 
 
-name: lavaset-build
+name: Build and Publish Wheels
 
 on: [push, pull_request]
 
 jobs:
   build_wheels:
-    name: Build wheels on Windows for CPython ${{ matrix.python-version }}
+    name: Build wheels on Windows
     runs-on: windows-latest
-    strategy:
-      matrix:
-        python-version: ['3.10']
-
     steps:
     - uses: actions/checkout@v2
 
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.x' # Use the latest version of Python since we're building for multiple versions
 
     - name: Install cibuildwheel
       run: python -m pip install cibuildwheel
@@ -104,14 +100,15 @@ jobs:
     - name: Build wheels with cibuildwheel
       run: python -m cibuildwheel --output-dir wheelhouse
       env:
-        CIBW_BUILD: cp${{ matrix.python-version }}-*
+        CIBW_BUILD: cp36-* cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*
+        CIBW_ARCHS: auto64 auto32 ARM64
         CIBW_BEFORE_BUILD: pip install numpy
-        # If you have multiple dependencies, consider using a requirements.txt
 
     - uses: actions/upload-artifact@v2
       with:
-        name: wheels-windows-python${{ matrix.python-version }}
+        name: wheels-windows
         path: ./wheelhouse/*.whl
+
 
 # name: lavaset-build
 
