--- a/.github/workflows/lavaset-build.yml
+++ b/.github/workflows/lavaset-build.yml
@@ -1,81 +1,83 @@
-name: LAVASET Release
+# name: LAVASET Release
 
-on:
-  release:
-    types: [created]
+# on:
+#   release:
+#     types: [created]
 
-jobs:
-  release:
-    name: Release on Python ${{ matrix.python-version }}
-    runs-on: [ubuntu-latest, windows-latest, macos-latest]
+# jobs:
+#   release:
+#     name: Release on Python ${{ matrix.python-version }}
+#     runs-on: [ubuntu-latest, windows-latest, macos-latest]
 
-    strategy:
-      matrix:
-        python-version: [3.9, 3.10, 3.11, 3.12]
+#     strategy:
+#       matrix:
+#         python-version: [3.9, 3.10, 3.11, 3.12]
 
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
+#       - name: Set up Python
+#         uses: actions/setup-python@v2
+#         with:
+#           python-version: ${{ matrix.python-version }}
 
-      - name: Upload Wheels as Artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: wheels-python${{ matrix.python-version }}
-          path: ./wheelhouse/*.whl
+#       - name: Upload Wheels as Artifacts
+#         uses: actions/upload-artifact@v2
+#         with:
+#           name: wheels-python${{ matrix.python-version }}
+#           path: ./wheelhouse/*.whl
 
-      - name: Create GitHub Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+#       - name: Create GitHub Release
+#         id: create_release
+#         uses: actions/create-release@v1
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         with:
+#           tag_name: ${{ github.ref }}
+#           release_name: Release ${{ github.ref }}
+#           draft: false
+#           prerelease: false
 
-      - name: Upload Wheels to Release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./wheelhouse/*.whl
-          asset_name: LAVASET-${{ matrix.python-version }}.whl
-          asset_content_type: application/octet-stream
+#       - name: Upload Wheels to Release
+#         uses: actions/upload-release-asset@v1
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         with:
+#           upload_url: ${{ steps.create_release.outputs.upload_url }}
+#           asset_path: ./wheelhouse/*.whl
+#           asset_name: LAVASET-${{ matrix.python-version }}.whl
+#           asset_content_type: application/octet-stream
+
+
 
 ### below is code for the lavaset-build workflow on windows platforms
 ### cannot do windows and macOS at the same time
-# name: lavaset-build
+name: lavaset-build
 
-# on: [push, pull_request]
+on: [push, pull_request]
 
-# jobs:
-#   build_wheels:
-#     name: Build wheels on Windows and macOS for Python ${{ matrix.python-version }}
-#     runs-on: [windows-latest]
-#     strategy:
-#       matrix:
-#         python-version: ['3.10']
+jobs:
+  build_wheels:
+    name: Build wheels on Windows and macOS for Python ${{ matrix.python-version }}
+    runs-on: [windows-latest]
+    strategy:
+      matrix:
+        python-version: ['3.9, 3.10, 3.11, 3.12']
 
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: Set up Python
-#       uses: actions/setup-python@v2
-#       with:
-#         python-version: ${{ matrix.python-version }}
-#     - name: Install cibuildwheel
-#       run: python -m pip install cibuildwheel
-#     - name: Build wheels
-#       run: python -m cibuildwheel --output-dir wheelhouse
-#     - uses: actions/upload-artifact@v2
-#       with:
-#         path: ./wheelhouse/*.whl
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install cibuildwheel
+      run: python -m pip install cibuildwheel
+    - name: Build wheels
+      run: python -m cibuildwheel --output-dir wheelhouse
+    - uses: actions/upload-artifact@v2
+      with:
+        path: ./wheelhouse3/*.whl
 
 
 # name: Build and Publish Wheels
